--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6008",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "sass": "^1.29.0",
+    "style-loader": "^2.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -26,6 +28,8 @@
     "babel-loader": "^8.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
