--- a/package.json
+++ b/package.json
@@ -6,30 +6,37 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "lint:fix": "eslint --fix --ext .js,.jsx .",
     "storybook": "start-storybook -p 6008",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "reset-css": "^5.0.1",
     "sass": "^1.29.0",
+    "sass-resources-loader": "^2.1.1",
     "style-loader": "^2.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-docgen-api": "^4.34.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@storybook/addon-actions": "^6.1.8",
-    "@storybook/addon-essentials": "^6.1.8",
-    "@storybook/addon-links": "^6.1.8",
-    "@storybook/vue": "^6.1.8",
+    "@storybook/addon-actions": "^6.1.9",
+    "@storybook/addon-essentials": "^6.1.9",
+    "@storybook/addon-links": "^6.1.9",
+    "@storybook/vue": "^6.1.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "node-sass": "^5.0.0",
+    "postcss-import": "^13.0.0",
+    "sass-loader": "^10.1.0",
+    "vue-material-design-icons": "^4.11.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
