--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.14.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-vue": "^7.1.0",
     "node-sass": "^5.0.0",
     "postcss-import": "^13.0.0",
