--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-actions": "^6.1.9",
     "@storybook/addon-essentials": "^6.1.9",
     "@storybook/addon-links": "^6.1.9",
+    "@storybook/addon-viewport": "^6.1.10",
     "@storybook/vue": "^6.1.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
